--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -20,8 +20,8 @@ body{
 	font-size: 16px;
 	line-height: 1.5;
 	background-color: $c-wh;
-	opacity: 0;
-	transition: opacity .3s linear;
+	// opacity: 0;
+	// transition: opacity .3s linear;
 	color: $c-bck;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -29,9 +29,9 @@ body{
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-	&.loaded{
-		opacity: 1;
-	}
+	// &.loaded{
+	// 	opacity: 1;
+	// }
 }  
 
 .top{
@@ -365,15 +365,15 @@ body{
 	display: block;    
 	height: 0;         
 	overflow: hidden;  
-	visibility: hidden;
+	// visibility: hidden;
 	opacity: 0;
 	transition: all .4s linear;
 	// transform: translateY(90px);
 	&.active{
 		transition: all .4s linear;
-
+		overflow-y: auto;
 		height: auto;      /* let the content decide it  */
-		visibility: visible;
+		// visibility: visible;
 		opacity: 1;
 		// transform: translateY(0px);
 	}
