--- a/src/scss/_form.scss
+++ b/src/scss/_form.scss
@@ -74,6 +74,7 @@ input[type="radio"] + label {
 	cursor: pointer;
 	border-radius: 5px;
 	overflow: hidden;
+	text-align: center;
 	img{
 		object-fit: cover;
 		width: 100%;
